[package]
name = "tag"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tag"
path = "src/lib.rs"

[[bin]]
name = "tagbin"
path = "src/bin.rs"

[dependencies]
criterion = "0.3"
rand = { version = "0.8.4" }
raylib = { version = "3.7" }
shipyard = { git = "https://github.com/leudz/shipyard", features = ["proc", "thread_local", "parallel"] }
spade = "1.8.2"

[[bench]]
name = "performance_benchmarks"
harness = false

[profile.release]
lto = true